Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135597

QAbstractSlider is not using SliderOrientationChange

XMLWordPrintable

    • 2
    • f4e892d79 (dev), d6284de75 (6.9), 90216d8ec (6.8), 6a92fe4d1 (tqtc/lts-6.5), 54865833c (dev), 26cddcbd8 (tqtc/lts-5.15), 4b20e23ed (6.9), 45e8c81c5 (6.8), 7e3a5edfc (tqtc/lts-6.5), ec91b8eac (tqtc/lts-5.15)
    • Foundation Sprint 129

      When the orientation of a slider is modified, the sliderChange method should be called with the value SliderOrientationChange.

      It is not the case, as the call to sliderChange is missing in QAbstractSlider::setOrientation. sliderChange should be called instead of update (as update is called in sliderChange).

      Because of this in my derived class I have to check for orientation changes at each paint as I can not track them.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mmutz Marc Mutz
            nicolasdelaporte Nicolas Delaporte
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: